--- a/Our Lawyer.html
+++ b/Our Lawyer.html
@@ -37,7 +37,7 @@
 
         <div id="box-container">
             <div class="box">
-                <img src="https://www.jotform.com/uploads/LindaJohansson/form_files/ertygvuy-modified.61af517df16d44.07141412.png" alt="image_1">
+                <img src="image/3d-cartoon-portrait-person-practicing-law-related-profession.jpg" alt="image_1" style="width: 330px; height: 330px; border-radius: 50%;">
                 <h2>Adv. Michael V Henline</h2>
                 <p>10 Year</p>
                 <p>Cheque Bounce, Criminal, Consumer Court, Civil, Family</p>
@@ -45,7 +45,7 @@
                 <a href="#"><button class="btn">Call</button></a><br></br>
             </div>
             <div class="box">
-                <img src="https://www.jotform.com/uploads/LindaJohansson/form_files/ewfffgg-modified.61af515b66fcc2.69520210.png" alt="image_2">
+                <img src="image/3d-cartoon-portrait-person-practicing-law-related-profession.jpg"image_2" style="width: 330px; height: 330px; border-radius: 50%;">
                 <h2>Adv. Kristal Bridgeman</h2>
                 <p>14 Year</p>
                 <p>Cheque Bounce, Consumer Court, Civil, Family</p>
@@ -53,7 +53,7 @@
                 <a href="#"><button class="btn">Call</button></a><br></br>
             </div>
             <div class="box">
-                <img src="https://www.jotform.com/uploads/LindaJohansson/form_files/ertygvuy-modified.61af517df16d44.07141412.png" alt="image_3">
+                <img src="image/3d-cartoon-portrait-person-practicing-law-related-profession.jpg" alt="image_3" style="width: 330px; height: 330px; border-radius: 50%;">
                 <h2>Adv Michael V Henline</h2>
                 <p>10 Year</p>
                 <p>Cheque Bounce, Criminal, Consumer Court, Civil, Family</p>
